--- a/work/mybiblio.bib
+++ b/work/mybiblio.bib
@@ -506,3 +506,25 @@
     eprint = {https://science.sciencemag.org/content/363/6432/eaav3218.full.pdf},
     journal = {Science}
 }
+
+@manual{backdropFilter,
+    author = {mdnwebdocs-bot and
+              ebukva and
+              fscholz and
+              silverwind and
+              mfluehr and
+              alanhogan and
+              Sebastianz and
+              rwilson.or and
+              sebastien-bartoli and
+              duncanmcdonald and
+              duvrai and
+              teoli and
+              cvrebert and
+              jwhitlock},
+    title = {backdrop-filter},
+    year = {2019},
+    publisher = {Mozilla},
+    note = {MDN web docs},
+    url = {https://developer.mozilla.org/en-US/docs/Web/CSS/backdrop-filter}
+}
