--- a/work/diplom.tex
+++ b/work/diplom.tex
@@ -545,7 +545,7 @@ Bases: \textit{object}
  \item \textbf{features}: \textit{list}
  
  List of additional features. Amount of features should be equal to the amount of languages.
- By default, if you add stroke features, a legend will appear. To shut it down set \textit{stroke_legend} attribute to \textit{False}.
+ By default, if you add stroke features, a legend will appear. To shut it down set \textit{stroke\_legend} attribute to \textit{False}.
  To change the title of the legend use \textit{stroke\_legend\_title} attribute.
  To change legend position use use \textit{stroke\_legend\_position} attribute.
  
