--- a/work/preza.tex
+++ b/work/preza.tex
@@ -413,5 +413,10 @@ feature & \_10A\_desc & \_25B\_desc & \_39B\_desc & \_47A\_desc & ... \\
 \end{adjustbox}
 \end{frame}
 
+\begin{frame}[allowframebreaks]
+\frametitle{References}
+\renewcommand*{\bibfont}{\tiny}
+\printbibliography
+\end{frame}
 
 \end{document}
