--- a/work/preza.tex
+++ b/work/preza.tex
@@ -34,7 +34,7 @@
 \addbibresource{mybiblio.bib}
  
 \title{Python Library for Linguistic Typology}
-\author{Michael Voronov}
+\author[Michael Voronov]{Michael Voronov\\{\small Scientific Advisor: Boris Orekhov}}
 \institute{Higher School of Economics}
 \date{18.06.2019}
  
@@ -71,7 +71,6 @@ Why Python?
  \item Folium \parencite{folium}
  \item Matplotlib \parencite{matplotlib}
  \item PyGlottolog \parencite{Robert2Forkel2019}
- \item OpenElevationAPI \parencite{OpenElevation}
  \item SciPy \parencite{scipy}
 \end{itemize}
 \end{frame}
@@ -396,7 +395,6 @@ Word\_domains &  MphmTypesInCohSuffixDomain.n &  0.00196901 \\
 
 \begin{frame}
 \frametitle{WALS: Implicative Universaliae}
-
 \begin{adjustbox}{max width=\textwidth}
 \begin{tabular}{|l|cccc|l|}
 \hline
@@ -411,6 +409,25 @@ feature & \_10A\_desc & \_25B\_desc & \_39B\_desc & \_47A\_desc & ... \\
 \hline
 \end{tabular}
 \end{adjustbox}
+\end{frame}
+
+\begin{frame}
+\frametitle{Conclusion}
+\begin{itemize}
+ \item LingTypology: a Python tool for linguistic typology
+ \begin{itemize}
+  \item Repository: \textit{https://github.com/OneAdder/lingtypology}
+  \item Documentation: \textit{https://oneadder.github.io/lingtypology/}
+  \item PyPI: \textit{https://pypi.org/project/lingtypology/}
+ \end{itemize}
+ \item Demonstrative Studies
+ \begin{itemize}
+  \item Simplicity
+  \item Reproducibility
+  \item Visualisation
+ \end{itemize}
+\end{itemize}
+
 \end{frame}
 
 \begin{frame}[allowframebreaks]
