--- a/work/preza.tex
+++ b/work/preza.tex
@@ -13,6 +13,8 @@
 \usepackage{array,tabularx,tabulary,booktabs}
 \usepackage{adjustbox} 
 
+\usepackage{hyperref}
+
 \usepackage{pythonhighlight}
 \usepackage{listings}
 \usepackage{lstautogobble}
@@ -80,11 +82,11 @@ Why Python?
 \frametitle{Project Description}
 Remote Repository:
 \begin{itemize}
- \item https://github.com/OneAdder/lingtypology
+ \item \url{https://github.com/OneAdder/lingtypology}
 \end{itemize}
 Documentation:
 \begin{itemize}
- \item https://oneadder.github.io/lingtypology/
+ \item \url{https://oneadder.github.io/lingtypology/}
 \end{itemize}
 Modules:
 \begin{itemize}
@@ -360,6 +362,8 @@ Results:
 4 &  Median &  0.578074 &  0.254949 &       0.610642 &    ... \\
 \bottomrule
 \end{tabular}
+
+Full Table: \url{https://github.com/OneAdder/lingtypology_research/blob/master/PHOIBLE:\%20Quantitative\%20Research.ipynb}
 \end{frame}
 
 \begin{frame}
@@ -409,6 +413,7 @@ feature & \_10A\_desc & \_25B\_desc & \_39B\_desc & \_47A\_desc & ... \\
 \hline
 \end{tabular}
 \end{adjustbox}
+Full table: \url{https://github.com/OneAdder/lingtypology_research/blob/master/WALS:\%20Quantitative\%20Research.ipynb}
 \end{frame}
 
 \begin{frame}
@@ -416,15 +421,15 @@ feature & \_10A\_desc & \_25B\_desc & \_39B\_desc & \_47A\_desc & ... \\
 \begin{itemize}
  \item LingTypology: a Python tool for linguistic typology
  \begin{itemize}
-  \item Repository: \textit{https://github.com/OneAdder/lingtypology}
-  \item Documentation: \textit{https://oneadder.github.io/lingtypology/}
-  \item PyPI: \textit{https://pypi.org/project/lingtypology/}
+  \item Repository: \url{https://github.com/OneAdder/lingtypology}
+  \item Documentation: \url{https://oneadder.github.io/lingtypology/}
+  \item PyPI: \url{https://pypi.org/project/lingtypology/}
  \end{itemize}
  \item Demonstrative Studies
  \begin{itemize}
   \item Simplicity
   \item Reproducibility
-  \item Visualisation
+  \item Visualization
  \end{itemize}
 \end{itemize}
 
